Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Gavinkao.github.com : ">
+    <meta name="description" content="Gavinkao.github.io : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Gavinkao.github.com</title>
+    <title>Gavinkao.github.io</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/gavinkao">View on GitHub</a>
 
-          <h1 id="project_title">Gavinkao.github.com</h1>
+          <h1 id="project_title">Gavinkao.github.io</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
